progs/cpp/3d98b920-62ef-4b30-8d91-d35a97450fdd/err.txt
progs/cpp/3d98b920-62ef-4b30-8d91-d35a97450fdd/prog.cpp:6:14: warning: missing terminating " character [enabled by default]
       cout <<";
              ^
progs/cpp/3d98b920-62ef-4b30-8d91-d35a97450fdd/prog.cpp:6:7: error: missing terminating " character
       cout <<";
       ^
progs/cpp/3d98b920-62ef-4b30-8d91-d35a97450fdd/prog.cpp: In function ‘int main()’:
progs/cpp/3d98b920-62ef-4b30-8d91-d35a97450fdd/prog.cpp:7:7: error: expected primary-expression before ‘return’
       return 0;
       ^
progs/cpp/3d98b920-62ef-4b30-8d91-d35a97450fdd/prog.cpp:7:7: error: expected ‘;’ before ‘return’
